# fastapi-com-python

./: README.md  pyproject.toml  requirements.txt
app/: __main__.py
app/api/: __init__.py
app/api/configs/: __init__.py
app/api/server/: __init__.py  routes.py
app/api/server/routes/: Home.py  Users.py
app/api/server/routes/users/: Users.py
server/: __main__.py
server/api/controllers/users/: __init__.py
server/api/models/: user.py
server/api/routes/: Home.py  users.py
server/api/services/: users.py
server/configs/: __init__.py
