[tool.poetry]
name = "fastapi-com-python"
version = "0.1.0"
description = "Resoluções dos exercícios sobre FastAPI com Python."
authors = ["janascher <janainascher@protonmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_com_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
